maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:36: error: not found: value getLargeurMonde
      x = (x-1)%getLargeurMonde()
                ^JediEscaper:38: error: not found: value getHauteurMonde
      y = (y-1)%getHauteurMonde()
                ^